다국어설정

--- a/hugo.yaml
+++ b/hugo.yaml
@@ -23,22 +23,22 @@ minify:
   minifyOutput: true
 
 menu:
-  main:
-    - name: Posts
-      url: /posts/
-      weight: 4
-    - name: Archive
-      url: /archives/
-      weight: 5
-    - name: Search
-      url: /search/
-      weight: 10
-    - name: Tags
-      url: /tags/
-      weight: 10
-    - name: About 
-      url: /about/
-      weight: 15
+  # main:
+  #   - name: Posts
+  #     url: /posts/
+  #     weight: 4
+  #   - name: Archive
+  #     url: /archives/
+  #     weight: 5
+  #   - name: Search
+  #     url: /search/
+  #     weight: 10
+  #   - name: Tags
+  #     url: /tags/
+  #     weight: 10
+  #   - name: About 
+  #     url: /about/
+  #     weight: 15
 
 
 params:
@@ -114,10 +114,10 @@ defaultContentLanguage: kr
 defaultContentLanguageInSubdir: false
 languages:
   kr:
-    contentDir: content/kr
     weight: 1
     languageName: 한국어
     languageCode: kr
+    contentDir: /content/kr/
     title: 페이퍼 기본 틀
     menu:
       main:
@@ -137,10 +137,10 @@ languages:
           url: /about/
           weight: 15
   en:
-    contentDir: content/en
     weight: 2
     languageName: English
     languageCode: en
+    contentDir: content/en/
     title: Paper Basic
     menu:
       main:
@@ -157,5 +157,5 @@ languages:
           url: /tags/
           weight: 10
         - name: About
-          url: /about/
+          url: en/about/
           weight: 15
