--- a/hugo.yaml
+++ b/hugo.yaml
@@ -15,8 +15,20 @@ module:
 
 outputs:
   home:
-    - HTML
-    - JSON
+    - html
+    - rss
+    - json
+  section:
+    - html
+    - rss
+  taxonomy:
+    - html
+  term:
+    - html
+
+services:
+  rss:
+    limit: 42
 
 minify:
   disableXML: true
