--- a/hugo.yaml
+++ b/hugo.yaml
@@ -116,7 +116,10 @@ languages:
       main:
         - name: 게시글
           url: /posts/
-          weight: 4
+          weight: 3
+        - name: 파트너스
+          url: /partners/
+          weight: 4 
         - name: 아카이브
           url: /archives/
           weight: 5
