--- a/hugo.yaml
+++ b/hugo.yaml
@@ -120,6 +120,9 @@ languages:
         - name: 게시글
           url: /posts/
           weight: 5
+        - name: Affiliate
+          url: /affiliate/
+          weight: 6
         - name: 아카이브
           url: /archives/
           weight: 10
@@ -130,23 +133,23 @@ languages:
           url: /tags/
           weight: 20
 
-  en:
-    weight: 2
-    languageName: English
-    languageCode: en
-    contentDir: content/en/
-    title: Paper Basic
-    menu:
-      main:
-        - name: Affiliate
-          url: /affiliate/
-          weight: 5
-        - name: Archive
-          url: /archives/
-          weight: 10
-        - name: Search
-          url: /search/
-          weight: 15
-        - name: Tags
-          url: /tags/
-          weight: 20
+  # en:
+  #   weight: 2
+  #   languageName: English
+  #   languageCode: en
+  #   contentDir: content/en/
+  #   title: Paper Basic
+  #   menu:
+  #     main:
+  #       - name: Affiliate
+  #         url: /affiliate/
+  #         weight: 5
+  #       - name: Archive
+  #         url: /archives/
+  #         weight: 10
+  #       - name: Search
+  #         url: /search/
+  #         weight: 15
+  #       - name: Tags
+  #         url: /tags/
+  #         weight: 20
